--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "com.snesconsulting.camerapreview"",
+    "name": "com.snesconsulting.camerapreview",
     "version": "1.0.0",
     "description": "Cordova Silent Shot Camera Preview Plugin",
     "cordova": {
-        "id": "com.snesconsulting.camerapreview"",
+        "id": "com.snesconsulting.camerapreview",
         "platforms": [
                       "android",
                       "ios"
