--- a/plugin.xml
+++ b/plugin.xml
@@ -8,40 +8,40 @@
     <description>Cordova plugin that allows camera interaction from HTML code. Show camera preview popup on top of the HTML.</description>
     <license>Apache 2.0</license>
     <keywords>Ionic,Cordova,Camera, Preview, Popup, Floating, Box</keywords>
-    <repo>https://github.com/ArchieGoodwin/ABTPhoto.git</repo>
-    <issue>https://github.com/ArchieGoodwin/ABTPhoto/issues</issue>
-
-  <js-module src="www/CameraPreview.js" name="CameraPreview">
-    <clobbers target="com.snesconsulting.camerapreview" />
-  </js-module>
-
-  <!-- android -->
-  <platform name="android">
-    <framework src="com.android.support:support-v4:+" />
-    <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="CameraPreview">
-        <param name="android-package" value="com.snesconsulting.camerapreview" />
-        <param name="onload" value="true" />
-      </feature>
-    </config-file>
+    <repo>https://github.com/snesconsulting/CordovaCameraPreview.git</repo>
+    <issue>https://github.com/snesconsulting/CordovaCameraPreview/issues</issue>
     
-    <config-file target="AndroidManifest.xml" parent="/manifest">
-  <uses-feature android:name="android.hardware.camera" android:required="false" />
-  <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    </config-file>
-    <config-file target="AndroidManifest.xml" parent="/manifest/application">
-	<activity android:name="com.snesconsulting.CameraActivity" android:screenOrientation="portrait" android:theme="@style/CameraPreviewTheme" />
-    </config-file>
+    <js-module src="www/CameraPreview.js" name="CameraPreview">
+        <clobbers target="cordova.plugins.camerapreview" />
+    </js-module>
     
-    <source-file src="src/android/com/snesconsulting/CameraPreview.java" target-dir="src/com/snesconsulting" />
-    <source-file src="src/android/com/snesconsulting/CameraActivity.java" target-dir="src/com/snesconsulting" />
-    <source-file src="src/android/com/snesconsulting/camera_activity.xml" target-dir="res/layout" />
-    <source-file src="src/android/com/snesconsulting/camera_theme.xml" target-dir="res/values" />
+    <!-- android -->
+    <platform name="android">
+        <framework src="com.android.support:support-v4:+" />
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="CameraPreview">
+                <param name="android-package" value="com.snesconsulting.CameraPreview" />
+                <param name="onload" value="true" />
+            </feature>
+        </config-file>
         
-  </platform>
-
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-feature android:name="android.hardware.camera" android:required="false" />
+            <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+            <uses-permission android:name="android.permission.CAMERA" />
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+        </config-file>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:name="com.snesconsulting.CameraActivity" android:screenOrientation="portrait" android:theme="@style/CameraPreviewTheme" />
+        </config-file>
+        
+        <source-file src="src/android/com/snesconsulting/CameraPreview.java" target-dir="src/com/snesconsulting" />
+        <source-file src="src/android/com/snesconsulting/CameraActivity.java" target-dir="src/com/snesconsulting" />
+        <source-file src="src/android/com/snesconsulting/camera_activity.xml" target-dir="res/layout" />
+        <source-file src="src/android/com/snesconsulting/camera_theme.xml" target-dir="res/values" />
+        
+    </platform>
+    
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -49,27 +49,28 @@
                 <param name="ios-package" value="CameraPreview" onload="true" />
             </feature>
         </config-file>
-
+        
         <header-file src="src/ios/CameraPreview.h" />
         <source-file src="src/ios/CameraPreview.m" />
-
+        
         <header-file src="src/ios/CameraSessionManager.h" />
         <source-file src="src/ios/CameraSessionManager.m" />
-
+        
         <header-file src="src/ios/CameraRenderController.h" />
         <source-file src="src/ios/CameraRenderController.m" />
-	
-	       <framework src="ImageIO.framework" weak="true" />
-         <framework src="MobileCoreServices.framework" />
-	       <framework src="CoreLocation.framework" />
-         <framework src="CoreGraphics.framework" />
-         <framework src="AssetsLibrary.framework" />
-         <framework src="CoreGraphics.framework" />
-         <framework src="CoreImage.framework" />
-         <framework src="OpenGLES.framework" />
-         <framework src="GLKit.framework" />
-         <framework src="CoreVideo.framework" />
-	 
+        
+        <framework src="ImageIO.framework" weak="true" />
+        <framework src="MobileCoreServices.framework" />
+        <framework src="CoreLocation.framework" />
+        <framework src="CoreGraphics.framework" />
+        <framework src="AssetsLibrary.framework" />
+        <framework src="CoreGraphics.framework" />
+        <framework src="CoreImage.framework" />
+        <framework src="OpenGLES.framework" />
+        <framework src="GLKit.framework" />
+        <framework src="CoreVideo.framework" />
+        
     </platform>
-
+    
 </plugin>
+
